[package]
name = "dalgona"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1"
committable = { git = "https://github.com/EspressoSystems/commit.git" }
commonware-codec = "2026.5.0"
commonware-utils = "2026.5.0"
espresso-types = { git = "https://github.com/EspressoSystems/espresso-network.git", rev = "0d10e7f93b6b481f5f45a4b39bf23430559fffa2" }
thiserror = "2"
